# DataEngineeringCourse

./: Upload_data_temp.ipynb  docker-compose.yaml
Week1_Intro/: Dockerfile  homework.ipynb  ingest_data.py  pipeline.py  pyproject.toml  queries_hw1.sql  upload_data.ipynb
